k8n/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: blimpify-web
  name: blimpify-web
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: blimpify-web
