k8n/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: blimpify-web
  namespace: default
spec:
  rules:
  - host: blimpify.de
    http:
      paths:
      - backend:
          serviceName: blimpify-web
          servicePort: 80
        path: /
  - host: blimpify.space
    http:
      paths:
      - backend:
          serviceName: blimpify-web
          servicePort: 80
        path: /
  tls:
  - hosts:
    - blimpify.space
    secretName: blimpify-tls
  - hosts:
    - blimpify.de
    secretName: blimpify-tls
status:
  loadBalancer:
    ingress:
    - {}
